2009-4-28 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.07-1
   * rename mi.dichotomous to mi.binary
   * rename correlated slot to collinear
   * rename continue.on.convergence to run.past.convergence


2009-4-22 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.06-5
   * redesign formulas
   * R/mi.info: fix a bug in mi.correlated.list

2009-4-18 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.06-2
   * R/mi: fix a bug in the print out of the process
   * R/mi.info: update.mi.info: revise formula when type is updates as 
      ordered or unorderd categorical type.

2009-4-16 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.06-1   
   * R/mi.preprocess: fix bugs in mi.postprocess()
   * R/mi: fix bugs in mi.data.frame (was not using rho for mi.copy)
   * R/mi.correlated.list: if missing pattern are different in both 
      correlated variables, treat this as structured correlation

2009-4-12 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.05-1   
   * R/mi.preprocess: new mi.preprocess and mi.postprocess
   * add "log-contiunous" variable type

2009-4-7 Yu-Sung Su     <ys463@columbia.edu>  
   * man/mi.pooled: new doc for mi.pooled
   * R/AllClass: mi.lm, mi.glm, mi.mer are obsoleted
   * R/mi.pooled: new function to pool estimates


2009-4-5 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi: fix dimensional probelm when model is of mulitnom; 
      now coef.convergence is working!
   * R/mi.preprocess: fix labels lost for unordered-categorical type

2009-4-3 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi: monitor the convergence of unordered-categorical type with 
      binary transformation
   * R/AllInternal: add .cat2binary .catvarnames, .fool, .foo2


2009-4-2 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi: allow add.priors to be logical, set FALSE to speicify no prior


2009-4-2 Yu-Sung Su     <ys463@columbia.edu>  